--- a/.gitmodules
+++ b/.gitmodules
@@ -1,36 +1,12 @@
-[submodule "externals/libdbglog"]
-	path = externals/libdbglog
-	url = https://github.com/Melown/libdbglog.git
-[submodule "externals/libutility"]
-	path = externals/libutility
-	url = https://github.com/Melown/libutility.git
-[submodule "externals/buildsys/common"]
-	path = externals/buildsys/common
-	url = https://github.com/Melown/buildsys-common.git
-[submodule "externals/buildsys/cmake"]
-	path = externals/buildsys/cmake
-	url = https://github.com/Melown/buildsys-cmake.git
 [submodule "externals/libservice"]
 	path = externals/libservice
 	url = https://github.com/Melown/libservice.git
-[submodule "externals/libmath"]
-	path = externals/libmath
-	url = https://github.com/Melown/libmath.git
-[submodule "externals/libimgproc"]
-	path = externals/libimgproc
-	url = https://github.com/Melown/libimgproc.git
-[submodule "externals/libgeo"]
-	path = externals/libgeo
-	url = https://github.com/Melown/libgeo.git
 [submodule "externals/libglsupport"]
 	path = externals/libglsupport
 	url = https://github.com/Melown/libglsupport.git
 [submodule "externals/libvtsoffscreen"]
 	path = externals/libvtsoffscreen
 	url = https://github.com/Melown/libvtsoffscreen.git
-[submodule "externals/libgeometry"]
-	path = externals/libgeometry
-	url = https://github.com/Melown/libgeometry.git
-[submodule "externals/libjsoncpp"]
-	path = externals/libjsoncpp
-	url = https://github.com/Melown/libjsoncpp.git
+[submodule "externals/vts-browser-cpp"]
+	path = externals/vts-browser-cpp
+	url = https://github.com/melowntech/vts-browser-cpp
